--- a/style.css
+++ b/style.css
@@ -1,21 +1,72 @@
+/* Utilites */
 * {
-    height: fit-content;
-    width: auto;
-    text-align: center;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+    color: #333;
+    line-height: 1.6;
+    max-width: 1100px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+img {
+    width: 100%;
 }
 
 h1{
-    padding-left: 20px;
+    text-align: center;
     color: brown;
 }
 
-li {
-    list-style: none;
-    margin-bottom: 10px;
+h2 {
+    color: green;
 }
 
-a{
+ul {
+    list-style: none;
+}
+
+a {
     text-decoration: none;
     color: black;
 }
 
+/* Home Page */
+.recipe-nav {
+    text-align: center;
+}
+
+/* recipe page */
+.description {
+    margin:20px 0;
+}
+
+.description p {
+    font-size: medium;
+    color: black;
+}
+
+/* Ingredients section */
+.ingredients {
+    margin:20px 0;
+}
+
+.ul-ingredients {
+    color: black;
+}
+
+/* Steps section */
+.steps {
+    margin:20px 0;
+}
+
+.ol-steps {
+    padding-left: 17px;
+    margin: 0;
+    color: black;
+}
