--- a/style.css
+++ b/style.css
@@ -23,8 +23,17 @@ h1{
     color: brown;
 }
 
+h1:hover {
+    color: blue;
+}
+
 h2 {
     color: green;
+}
+
+h2:hover {
+    font-weight: 900;
+    color: orangered;
 }
 
 ul {
@@ -34,6 +43,10 @@ ul {
 a {
     text-decoration: none;
     color: black;
+}
+
+a:hover {
+    color: blueviolet;
 }
 
 /* Home Page */
