--- a/style.css
+++ b/style.css
@@ -54,6 +54,19 @@ a:hover {
     text-align: center;
 }
 
+.flex {
+    display: inline-flex;
+    margin: 30px;
+    align-items: flex-end;
+    padding-left: 10px;
+}
+
+.card {
+    width: 210px;
+    height: 300px;
+    border: 5px solid black;
+}
+
 /* recipe page */
 .description {
     margin:20px 0;
